# trapi-mcp

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pypi-publish.yaml
src/trapi_mcp/: __init__.py  api_utilities.py  main.py  tools.py
