[project]
name = "trapi-mcp"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.7.1",
    "mcp>=1.9.3",
    "requests>=2.32.4",
]
dynamic = [ "version" ]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[dependency-groups]
dev = [
  "pytest",
  "black",
]

[project.urls]
"Homepage" = "https://github.com/smoxon/trapi-mcp"
"Bug Tracker" = "https://github.com/smoxon/trapi-mcp/issues"

[project.scripts]
nmdc-mcp = "trapi_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trapi_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
